fix: input boxes overflow on mobile

--- a/src/public/output.css
+++ b/src/public/output.css
@@ -545,10 +545,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -569,26 +565,13 @@ video {
   width: 83.333333%;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
-}
-
 .min-w-\[500px\] {
   min-width: 500px;
-}
-
-.min-w-fit {
-  min-width: -moz-fit-content;
-  min-width: fit-content;
 }
 
 .max-w-xl {
@@ -702,19 +685,6 @@ a:hover {
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
   }
-}
-
-.\[\&\>\*\]\:m-auto>* {
-  margin: auto;
-}
-
-.\[\&\>\*\]\:mx-auto>* {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.\[\&\>\*\]\:w-5\/6>* {
-  width: 83.333333%;
 }
 
 .\[\&\>\*\]\:select-all>* {
